# Zero-Agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  zero.json
.github/workflows/: ci.yml
_archived/: extensions.0  memory.0  ollama.0  openai.0  subagents.0
_archived/apps/: mode.0  tui.0
_archived/gateway/: telegram.0
bridge/rust/: Cargo.toml  README.md
bridge/rust/.cargo/: config.toml
bridge/rust/src/: agent.rs  config.rs  debug.rs  main.rs  memory.rs  profile.rs  provider.rs  tools.rs
bridge/rust/src/gateway/: mod.rs  telegram.rs
bridge/rust/src/providers/: anthropic.rs  mod.rs  openai.rs
bridge/rust/src/tools/: fs.rs  mod.rs  shell.rs
bridge/rust/src/tui/: activity.rs  approval.rs  commands.rs  conversation.rs  diff.rs  input.rs  layout.rs  markdown.rs  mod.rs  modal.rs  onboarding.rs  render.rs  status.rs  streaming.rs  thinking.rs  tools.rs
docs/bmad/: work-breakdown.md
docs/spec/: architecture.md  bridge-protocol.md  milestone-1.md  open-questions.md  packaging.md  phase-1-core-skeleton.md  phase-2-provider-skeleton.md  phases-3-7-skeleton.md  product-spec.md  roadmap.md  story-1.1-config-model.md  story-1.2-event-model.md  story-1.3-session-store.md  story-2.1-provider-registry.md  story-2.2-anthropic-provider.md  story-2.3-openai-provider.md  story-2.4-openai-compatible.md  story-3.1-tool-registry.md  story-3.2-filesystem-tools.md  story-3.3-shell-tool.md  story-3.4-memory-tool.md  story-3.5-extension-manager.md  (+7 more)
scripts/: install.ps1  install.sh  run.sh  run_tests.sh
spikes/: README.md  phase-0-results.md
src/: main.0
(+23 files in other folders)
