[package]
name = "zero-agent-bridge"
version = "0.1.0"
edition = "2024"

[features]
default = []
tui = []

[dependencies]
glob = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
chrono = "0.4"
